--- a/model_bookstore/config/xpaths.yml
+++ b/model_bookstore/config/xpaths.yml
@@ -1,18 +1,28 @@
 Amazon:
-  linkToTheProduct: "//td[@class='dataColumn']"
-  img: "//img[@id='prodImage']"
-  price: "//b[@class='priceLarge']"
-  title: "//span[@id='btAsinTitle']"
-  author: "//div[@class='buying']//span//a"
-  products: "//td[@class='dataColumn']"
-  description: "//div[@id='productDescription']//div[@class='productDescriptionWrapper']"
-  ISBN: "//td[@class='bucket']//li"
-  publisher: "//td[@class='bucket']//li"
-  reviews: "//td[@class='bucket']//span[@class='crAvgStars']//a"
+  item: "//item"
+  author: "//author"
+  title: "//title"
+  detailpageurl: "//detailpageurl"
+  mediumimage: "//mediumimage//url"
+  publicationdate: "//publicationdate"
+  releasedate: "//releasedate"
+  publisher: "//publisher"
+  ean: "//ean"
+  isbn: "//isbn"
+  lowestnewprice: "//lowestnewprice//formattedprice"
 Bookline:
-  img: "valami"
-  price: "valami"
-  title: "valami"
-  author: "valami"
-  products: "valami"
+  item: "//div[@class='comp_search_results']//div"
+  matcher: "comp_product_displayproduct_search"
+  linkToTheProduct: "//div[@class='image']//a"
+  author: "//div[@class='maindata']//h2"
+  title: "//div[@class='maindata']//h1"
+  img: "//div[@class='product-info']//a[@class='popup']//img"
+  publicationdate: "//div[@class='maindata']//h3"
+  isbn: "//div[@class='maindata']//li"
+  price: "//div[@class='priceblockleft']//strong"
+Wikipedia:
+  item: "//table"
+  matcher: "infobox"
+  nameSpan: "//span[@class='fn']"
+  nameTh: "//th[@class='fn']"
 
