--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,7 +8,11 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
-
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = v
+resources.db.params.dbname = maxima
 
 
 
@@ -24,6 +28,12 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = v
+resources.db.params.dbname = maxima
 
 [development : production]
 phpSettings.display_startup_errors = 1
