--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,11 +8,32 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = v
+resources.db.params.dbname = maxima
+
+
+
+
 [staging : production]
 
 [testing : production]
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
+includePaths.library = APPLICATION_PATH "/../library"
+bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
+bootstrap.class = "Bootstrap"
+appnamespace = "Application"
+resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.params.displayExceptions = 0
+
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = v
+resources.db.params.dbname = maxima
 
 [development : production]
 phpSettings.display_startup_errors = 1
