--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,7 +1,7 @@
 [production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
-includePaths.library = APPLICATION_PATH "/../library"
+;includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
@@ -22,7 +22,7 @@ resources.db.params.dbname = maxima
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
-includePaths.library = APPLICATION_PATH "/../library"
+;includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
