--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,6 +20,10 @@ resources.db.params.dbname = maxima
 [staging : production]
 
 [testing : production]
+resources.router.routes.language.type = "Zend_Controller_Router_Route_Hostname" 
+resources.router.routes.language.route = ":192.168.0.107/newStuff" 
+
+
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 ;includePaths.library = APPLICATION_PATH "/../library"
